<resources>
    <string name="app_name">Dagbok</string>

    <!-- INICIAR SESION LAYOUT -->
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="se_me_olvido_contrasena">Se me olvido la contraseña</string>

    <!-- REGISTRO LAYOUT -->
    <string name="registro">Registro paciente</string>
    <string name="advertencia_registro_doctor">Advertencia: Si usted es doctor, se le recomienda registrarse con un correo intitucional y ponerse en contacto con el desarrollador, o mandar correo a dagbokapk@gmail.com</string>

    <!-- TITULOS MENU PRINCIPAL -->
    <string name="menu_principal">Menu principal</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="citas">Citas</string>
    <string name="estatus_consultorio">Consultorio</string>
    <string name="configuracion">Configuración</string>

    <!-- CAMPOS DE REGISTRO DEL USUARIO -->
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="peso">Peso (Kilogramos)</string>
    <string name="sexo">Sexo</string>
    <string name="estatura">Estatura (Metros)</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="especialidades">Especialidades</string>
    <string name="especialidad">Especialidad</string>
    <string name="horarios">Horarios</string>
    <string name="horario">Horario</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>

    <!-- AGREGAR CITA -->
    <string name="correo_paciente_ast">Correo del paciente*</string>
    <string name="fecha_ast">Fecha*</string>
    <string name="subcitas">Subcitas</string>
    <string name="no_encontro_usuario">No se encontro un usuario con ese correo</string>
    <string name="no_hay_usuario_cita">No ha buscado un usuario</string>
    <string name="fecha_repetida">Esa fecha ya esta seleccionada, ingrese otra fecha no repetida</string>
    <string name="no_hay_tratamientos">No hay tratamientos</string>
    <string name="agregar_tratamiento">Agregar tratamiento</string>
    <string name="busque_usuario">Busque un usuario primero, recuerde seleccionar la lupa.</string>
    <string name="asigne_fecha">Primero asigne una fecha base.</string>
    <string name="fecha_desfazada_menor">La fecha es menor a la fecha base, ingrese otra.</string>
    <string name="enfermedad_ast">Enfermedad*</string>
    <string name="no_hay_sub_fechas">No se han agregado subfechas, ingrese primero una</string>

    <!-- ESTATUS CONSULTORIO -->
    <string name="tomar_turno">Tomar turno</string>
    <string name="finalizar_turno">Terminar turno</string>
    <string name="cambiar_status">Cambiar estatus</string>

    <!-- CONFIGURACION -->
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="cambiar_datos">Cambiar Datos</string>
    <string name="cambiar_datos_doctor">Cambiar datos doctor</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="soy_doctor">Soy Doctor</string>
    <string name="ingrese_key">Ingrese el KEY</string>

    <!-- LISTA DE CITAS -->
    <string name="no_hay_propuestas">No hay propuestas</string>
    <string name="no_hay_citas">No hay citas</string>
    <string name="nueva_propuesta">Nueva propuesta</string>
    <string name="ultima_propuesta">Ultima propuesta</string>
    <string name="ver_mas">Ver mas</string>
    <string name="nuevas_activas">Citas Nuevas</string>
    <string name="viejas_no_activas">Citas Anteriores</string>

    <!-- INFORMACION CITA -->
    <string name="informacion_cita">Información Cita</string>
    <string name="proceso_colon">Proceso:</string>
    <string name="fecha_colon">Fecha:</string>
    <string name="proximas_citas">Proximas citas</string>
    <string name="no_hay_proximas_citas">No hay proximas citas</string>
    <string name="receta">Receta</string>
    <string name="no_hay_receta">No hay receta</string>
    <string name="editar_cita">Editar Cita</string>
    <string name="descripcion_colon">Descripción:</string>
    <string name="establecer_proxima_fecha">Establecer proxima fecha</string>
    <string name="terminar_tratamiento">Terminar tratamiento</string>
    <string name="activar_tratamiento">Activar tratamiento</string>
    <!-- EDITAR CITA -->
    <string name="pregunta_eliminar_cita">¿Está seguro de eliminar la cita?</string>

    <!-- ERROR FIELDS -->
    <string name="configuracion_usuario">Configurar usuario</string>
    <string name="no_se_guardo_usuario_correctamente">No se guardo su usuario correctamente, favor de ir a configuración y cambiar sus datos.</string>
    <string name="llenar_campo_vacio">LLenar este campo (obligatorio).</string>
    <string name="contrasena_no_coincide">La contraseña no coincide, favor de verificarla.</string>
    <string name="error_registro">No se pudo registrar intente mas tarde, por favor.</string>
    <string name="corre_no_verificado">Correo no verificado, favor de verificar el correo.</string>
    <string name="no_hay_conexion">No cuenta con conexión, favor de conectarse a la red.</string>
    <string name="hubo_error">Hubo un error, intente mas tarde.</string>
    <string name="key_invalida">La Key es invalida.</string>
    <string name="no_hay_especialidades">No hay Especialidades</string>
    <string name="no_hay_horarios">No hay Horarios</string>
    <string name="hubo_algo_raro_horas">Al parecer hubo algo raro al convertir las horas, intentelo mas tarde.</string>
    <string name="seleccione_dia_error">No ha seleccionado el dia para su horario.</string>

    <!-- ERRORES DE AUTENTIFICACION -->
    <string name="contraseña_incorrecta">La contraseña es incorrecta.</string>
    <string name="correo_incorrecto">El correo ingresado no existe o tiene mal formato.</string>
    <string name="corre_mal_formato">El correo tiene mal formato.</string>
    <string name="contraseña_debil">La contraseña es débil, favor de ingresar una contraseña con mas de 6 caracteres.</string>
    <string name="credenciales_invalidas">El correo no es valido, favor de ingresar el correo correctamente.</string>
    <string name="correo_usado">El correo ya esta en uso, favor de ingresar un nuevo correo.</string>

    <!-- FEEDBACK -->
    <string name="espere_aviso">Por favor espere…</string>
    <string name="cambio_datos_exitoso">Se guardaron los datos exitosamente.</string>
    <string name="eliminar_cuenta_exitosa">Cuenta Eliminada exitosamente</string>
    <string name="inicie_sesion_borrar_cuenta">Para eliminar la cuenta cierre la sesión e inicie sesión, despues intentelo de nuevo.</string>
    <string name="error_conexion_correo_creado">Si usted tuvo un error de conexión y el correo ya esta en uso, significa que se creo su correo.</string>
    <string name="no_puede_terminar_turno_no_suyo">Usted no esta en turno, no puede terminar algo que no empezo.</string>
    <string name="agrego_cita">Se agendo la cita correctamente</string>

    <!-- AVISOS DE TRANSACCIONES EXITOSOS -->
    <string name="registro_exitoso">Registro exitoso</string>
    <string name="se_le_mandara_correo_verificacion">Se le mandara un correo de verificación ala hora de iniciar sesión.</string>
    <string name="verifique_su_correo">Verifique su correo.</string>
    <string name="se_mando_correo_verificacion">Se envio a su correo un mensaje de verificación, favor de verificar su cuenta.</string>
    <string name="se_mando_correo_contraseña">Se envio a su correo un mensaje de recuperación de contraseña.</string>

    <!-- FIELDS -->
    <string name="seleccionar">Seleccionar</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="eliminar_foto">Eliminar Foto</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_especialidad">Agregar Especialidad</string>
    <string name="agregar_horario">Agregar Horario</string>
    <string name="agregar_peticion">Agregar Peticion</string>
    <string name="agregar_cita">Agregar Cita</string>
    <string name="remover">Remover</string>
    <string name="remover_especialidad">Remover Especialidad</string>
    <string name="remover_horario">Remover Horario</string>
    <string name="seleccione_dia">Seleccione el día</string>
    <string name="estatus">Estatus</string>
    <string name="estatus_colon">Estatus:</string>
    <string name="doctor">Doctor</string>
    <string name="descripcion">Descripción</string>
    <string name="paciente">Paciente</string>
    <string name="disponible">Disponible</string>
    <string name="ocupado">Ocupado</string>
    <string name="cerrado">Cerrado</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="enfermedad_colon">Enfermedad:</string>
    <string name="paciente_colon">Paciente:</string>
    <string name="tratamiento">Tratamiento</string>
    <string name="finalizado">Finalizado</string>

    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string name="domingo">Domingo</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>

    <string-array name="dias">
        <item>Domingo</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
    </string-array>

    <string-array name="sexos">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string name="todo">TODO</string>
</resources>