<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".DoctorInformacionCita">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_title_bar"
            android:backgroundTint="@color/verde_primario"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/verde_primario"
                android:contentDescription="@string/todo"
                android:minHeight="48dp"
                android:onClick="atras"
                android:src="@drawable/ic_flecha_atras"
                tools:ignore="DuplicateSpeakableTextCheck" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="65dp"
                android:layout_marginVertical="20dp"
                android:text="@string/informacion_cita"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/coolvetica"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/informacion_cita_preceso_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/coolvetica"
            android:text="@string/proceso_colon"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/informacion_cita_enfermedad_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/coolvetica"
            android:text="@string/enfermedad_colon"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/informacion_cita_descripcion_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/coolvetica"
            android:text="@string/descripcion_colon"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/informacion_cita_fecha_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/coolvetica"
            android:text="@string/fecha_colon"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/coolvetica"
                    android:text="@string/proximas_citas"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/informacion_cita_proxima_fechas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/coolvetica"
                    android:text="@string/no_hay_proximas_citas"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/gray"/>

        <LinearLayout
            android:id="@+id/doctor_informacion_cita_paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_button"
            app:backgroundTint="@color/azul"
            android:fontFamily="@font/coolvetica"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/editar_cita"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="editarCita"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/doctor_informacion_cita_tratamiento_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_button"
            android:fontFamily="@font/coolvetica"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/terminar_tratamiento"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="terminarTratamiento"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>
</ScrollView>