<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Configuracion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_title_bar"
            android:backgroundTint="@color/verde_primario"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/verde_primario"
                android:src="@drawable/ic_flecha_atras"
                android:layout_gravity="center"
                android:onClick="atras"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="65dp"
                android:layout_marginVertical="20dp"
                android:text="@string/configuracion"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/coolvetica"
                />
        </LinearLayout>

        <Button
            android:id="@+id/configuracion_cambioFoto_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/cambiar_foto"
            android:textColor="@color/black"
            android:fontFamily="@font/coolvetica"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:onClick="cambiarFoto"
            android:layout_marginHorizontal="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/cambiar_datos"
            android:textColor="@color/black"
            android:fontFamily="@font/coolvetica"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:onClick="cambiarDatos"
            android:layout_marginHorizontal="10dp" />
        <Button
            android:id="@+id/configuracion_soyDoctor_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/soy_doctor"
            android:textColor="@color/black"
            android:fontFamily="@font/coolvetica"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:layout_marginHorizontal="10dp" />
        <Button
            android:id="@+id/configuracion_cambioDatosDoc_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/cambiar_datos_doctor"
            android:textColor="@color/black"
            android:fontFamily="@font/coolvetica"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:layout_marginHorizontal="10dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            app:backgroundTint="@color/amarillo_advertencia"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/cambiar_contrasena"
            android:textColor="@color/black"
            android:fontFamily="@font/coolvetica"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:onClick="cambiarContrasena"
            android:layout_marginHorizontal="10dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            app:backgroundTint="@color/rojo"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/eliminar_cuenta"
            android:textColor="@color/white"
            android:fontFamily="@font/coolvetica"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:layout_marginHorizontal="10dp" />
    </LinearLayout>


</ScrollView>