<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="30dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/componenteCita_enfermedad_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/coolvetica"
            android:text="@string/enfermedad_colon"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/componenteCita_fecha_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/coolvetica"
            android:text="@string/fecha_colon"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/componenteCita_paciente_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/coolvetica"
            android:text="@string/paciente_colon"
            android:textSize="18sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>