<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_gravity="start|center_vertical"
            app:cardCornerRadius="50dp">
            <ImageView
                android:id="@+id/componenteTarjetaUsuario_foto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_no_disponible"
                android:scaleType="fitXY"
                android:contentDescription="@string/todo" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/componenteTarjetaUsuario_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:fontFamily="@font/coolvetica"/>
            <TextView
                android:id="@+id/componenteTarjetaUsuario_correoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/correo_electronico"
                android:textColor="@color/black"
                android:fontFamily="@font/coolvetica"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>